OAuth working with imported material

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.11.3"
+    "express-session": "^1.15.4",
+    "mongoose": "^4.11.3",
+    "passport": "^0.3.2",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6"
   }
 }
