--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Peter Wildberger, Parker Walker, Noah Rolf",
+  "author": "Peter Wildberger, Parker Walker, Noah Rolf, Ben Zeise",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
