--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "http": "0.0.0",
     "mongoose": "^4.11.3",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
